# Plant_Seedlings

./: Makefile  README.md  pyproject.toml
notebook/: notebook.ipynb  requirements.txt
plant_seedlings/: app.py  config.py  create_dir.py  data_generator.py  evaluate.py  main.py  notebook.ipynb  requirements.txt  train_cnn.py  train_vgg.py
tests/: test.py
