[tool.poetry]
name = "plant-seedlings"
version = "0.1.0"
description = ""
authors = ["brtenorio <b.nunes.bruno@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
ipykernel = "^6"
numpy = "^1"
tensorflow = "^2.15.0"
matplotlib = "^3"
streamlit = "^1"
scikit-learn = "^1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
